doc/src/css/style.css
/* ... */
.article code::before { background-color: transparent; bottom: 0; content: ""; left: 0; position: absolute; top: 0; width: .5rem; }
.article a code { color: #5f943d; }
.article pre code { padding: 0; }
.article blockquote { background: #edecff; border-left: 5px solid #5954ab; border-radius: 3px; margin: 0; padding: .5rem 1rem; }
.article blockquote p { color: #424063; }
.article blockquote > p + div pre { background: transparent; margin: 0; padding-left: 0; padding-top: 0; }
.article blockquote div + p { margin-top: 0; }
.article img { max-width: 100%; }

#edit-on-github { font-size: .9rem; font-weight: bold; margin-top: 4rem; text-align: right; }
#edit-on-github a { color: #777; }
#edit-on-github a:hover { color: #222; }

.article pre + .result { border-top-left-radius: 0; border-top: 1px solid #dfdad3; border-top-right-radius: 0; margin-top: -17px; padding-top: 16px; }

.article table { background: #fff; border-left: 1px solid #e6e6e6; border-spacing: 0; border-top: 1px solid #E6E6E6; margin: 20px 0; width: 100%; }
.article table td, .article table th { border-bottom: 1px solid #e6e6e6; border-right: 1px solid #e6e6e6; font-weight: normal; padding: 12px; text-align: left; vertical-align: top; }

.article .operators table td:first-child { text-align: center; width: 3rem; }
.article .data-type-operators table td:first-child { width: 7rem; }
.article .data-type-operators table td:last-child { word-spacing: .5rem; }
.article .data-type-false table td:first-child { width: 6rem; }
.article .assignments table td:first-child { width: 7rem; }

.article .api-spec { border-bottom: 1px solid #d8dee4; padding: 40px 0; }
.article h1 + .api-spec { padding-top: 0; }
.article .api-spec:first-of-type { margin-top: 0; }
.article .api-spec .spec { align-items: start; box-sizing: border-box; column-gap: min(3rem, 5vw); display: grid; grid-template-columns: repeat(2, 1fr); row-gap: 2.5vw; overflow-y: scroll; }
.article .api-spec .spec > :nth-child(2) { box-sizing: border-box; display: flex; flex-direction: column; gap: 16px; position: sticky; top: 10px; }

.article .api-spec .endpoints-box { border-radius: 10px; border: 1px solid #d8dee4; background: #f5f6f8; width: 100%; font-size: .9em; }
.article .api-spec .endpoints-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; text-transform: uppercase; font-size: .8em; padding: 10px 12px; font-weight: bold; width: 100%; }
.article .api-spec .endpoints-box > ul { list-style: none; flex-direction: column; align-items: stretch; justify-content: normal; display: flex; font-family: Courier New, Courier, monospace; padding-left: 20px; }
.article .api-spec .endpoints-box > ul > li { line-height: 1.8; }
.article .api-spec .endpoints-box > ul a { color: #333; }
.article .api-spec .endpoints-box > ul a > span { display: inline-block; text-align: right; width: 50px; }
.article .api-spec .endpoints-box > ul a > span.api-method-get { color: #045AD0; }
.article .api-spec .endpoints-box > ul a > span.api-method-post { color: #217005; }
.article .api-spec .endpoints-box > ul a > span.api-method-put { color: #7A2D91; }
.article .api-spec .endpoints-box > ul a > span.api-method-delete { color: #B13600; }

.article .api-spec .api-request-box { border-radius: 10px; display: flex; flex-direction: column; font-size: .9em; overflow: hidden; width: 100%; }
.article .api-spec .api-request-box > :nth-child(1) { align-items: center; background: #505865; color: #fff; display: flex; font-family: Courier New, Courier, monospace; font-size: .9em; justify-content: space-between; padding: 12px 12px 8px 12px; width: 100%; }
.article .api-spec .api-request-box > :nth-child(1)  span.api-method-get { color: #4ABCF9; }
.article .api-spec .api-request-box > :nth-child(1) span.api-method-post { color: #4BCA2E; }
.article .api-spec .api-request-box > :nth-child(1) span.api-method-put { color: #C084FF; }
.article .api-spec .api-request-box > :nth-child(1) span.api-method-delete { color: #FF9926; }
.article .api-spec .api-request-box > :nth-child(2) { background: #3e444f; color: #fff; counter-reset: fence-line-counter; font-family: Courier New, Courier, monospace; font-size: 14px; padding: 8px 20px 8px 20px; }
.article .api-spec .api-request-box > :nth-child(2) > div::before { color: #A9B2C2; content: counter(fence-line-counter); counter-increment: fence-line-counter 1; display: inline-block; padding-right: 12px; text-align: right; width: 20px; }
.article .api-spec .api-request-box .copy-request { cursor: pointer; float: right; }
.article .api-spec .api-request-box code { white-space: normal; }
.article .api-spec .api-request-box span { color: #4BCA2E; }

.article .api-spec .api-response-box { border: 1px solid #d8dee4; border-radius: 10px; flex-direction: column; font-size: .9em; overflow: hidden; width: 100%; }
.article .api-spec .api-response-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; color: #353A44; font-size: .9em; font-weight: bold; padding: 12px 12px 8px 12px; text-transform: uppercase; width: 100%; }
.article .api-spec .api-response-box > :nth-child(2) { background: #f5f6f8; color: #353A44; font-family: Courier New, Courier, monospace; font-size: 14px; overflow-wrap: break-word; padding: 8px 20px 8px 20px; white-space: pre-wrap; }

.article .api-spec .api-errors-box { border: 1px solid #d8dee4; border-radius: 10px; flex-direction: column; font-size: .9em; width: 100%; }
.article .api-spec .api-errors-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; color: #353A44; font-size: .9em; font-weight: bold; padding: 12px 12px 8px 12px; text-transform: uppercase; width: 100%; }
.article .api-spec .api-errors-box > :nth-child(2) { background: #f5f6f8; color: #4A515C; display: grid; font-size: 14px; gap: 8px; grid-template-columns: auto 1fr; padding: 8px 20px 8px 20px; }
.article .api-spec .api-errors-box > :nth-child(2) .row { cursor: pointer; display: contents; }
/* ... */

